--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -34,7 +35,23 @@
         </div>
     </header>
     <main>
-
+        <!-- teams -->
+        <section class="teams-container">
+            <div class="teams-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="teams-title">Quick list <span class="team-1"> of Our</span> <span
+                        class="team-2">Features</span></h3>
+                <p class="teams-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
