--- a/index.html
+++ b/index.html
@@ -52,6 +52,36 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- facts -->
+        <section>
+            <div class="facts">
+                <h3 class="fact-title">Some Facts</h3>
+                <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration.</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="stars">45</h2>
+                    <p class="card-des">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="stars">1458</h2>
+                    <p class="card-des">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="stars">590</h2>
+                    <p class="card-des">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="stars">22578</h2>
+                    <p class="card-des">Email Send</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
