--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
                 </div>
             </div>
         </section>
+        <!-- sponsors section -->
+        <section class="sponsor">
+            <h1 class="sponsors-title">Our Sponspors</h1>
+            <p class="sponsors-des">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered
+                alteration.</p>
+            <div class="sponsors-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+
+            </div>
+        </section>
     </main>
     <footer>
 
