--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- features section -->
+        <section class="features">
+            <div class="feature-content">
+                <h3 class="feature-title">Features you will <br> love & enjoy</h3>
+                <p class="feature-es">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="feature-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experiences</p>
+                </div>
+            </div>
+        </section>
         <!-- facts -->
         <section>
             <div class="facts">
@@ -85,7 +121,8 @@
         <!-- sponsors section -->
         <section class="sponsor">
             <h1 class="sponsors-title">Our Sponspors</h1>
-            <p class="sponsors-des">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="sponsors-des">There are many variations of passages of Lorem Ipsum available, but <br> the
+                majority
                 have suffered
                 alteration.</p>
             <div class="sponsors-img">
