--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="features">
             <div class="feature-content">
                 <h3 class="feature-title">Features you will <br> love & enjoy</h3>
-                <p class="feature-es">There are many variations of passages of Lorem Ipsum available, but the majority
+                <p class="feature-des">There are many variations of passages of Lorem Ipsum available, but the majority
                     have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <div class="feature-card">
